added fixed the clear list bug and added the functionality that adds PM or AM to the time based on the hour

--- a/style.css
+++ b/style.css
@@ -95,8 +95,12 @@ tr .table-title{
 	padding: 1em;
 	border-bottom: 2px solid #fff;
 }
-.placeholder-row{
+#placeholder-row{
 	font-family: inherit;
+}
+
+#placeholder-row .placeholder-txt{
+	color: grey;
 }
 
 .table-row{
